--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,15 @@
     "ecmaFeatures": {
         "modules": true
     },
-    "globals": {},
+    "parserOptions": {
+        "sourceType": "module"
+    },
+    "globals": {
+        "Y": true,
+        "Static": true,
+        "require": true,
+        "Squarespace": true
+    },
     "rules": {
         // Possible Errors
         "no-console": 0,
@@ -50,7 +58,7 @@
         "no-caller": 2,
         "no-div-regex": 2,
         "no-else-return": 2,
-        "no-empty-label": 2,
+        "no-labels": 2,
         "no-eq-null": 2,
         "no-eval": 2,
         "no-extend-native": [
@@ -63,7 +71,6 @@
         "no-implied-eval": 2,
         "no-invalid-this": 1,
         "no-iterator": 2,
-        "no-labels": 2,
         "no-lone-blocks": 2,
         "no-loop-func": 2,
         "no-multi-spaces": 2,
@@ -278,9 +285,12 @@
             "always"
         ],
         "sort-vars": 0,
-        "space-after-keywords": [
+        "keyword-spacing": [
             2,
-            "always"
+           {
+                "before": true,
+                "after": true
+            }
         ],
         "space-before-blocks": [
             2,
@@ -297,7 +307,6 @@
         "space-infix-ops": [
             2
         ],
-        "space-return-throw-case": 2,
         "space-unary-ops": [
             2,
             {
