--- a/package.json
+++ b/package.json
@@ -1,62 +1,72 @@
 {
-  "title": "Index.la",
-  "name": "index-la",
-  "private":true,
-  "description": "A really cool thing we're making :-)",
-  "version": "0.1.0",
-  "dependencies": {},
+  "title": "ProperJS App",
+  "name": "properjs-app",
+  "description": "A modular micro-framework for modern web apps.",
+  "version": "0.2.0",
   "devDependencies": {
-    "autoprefixer": "^5.2.0",
-    "babel-loader": "^5.3.2",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
-    "chokidar-cli": "^1.0.1",
-    "eslint": "^1.3.1",
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "ejs": "^2.4.1",
+    "eslint": "^2.9.0",
+    "eslint-loader": "^1.3.0",
     "expose-loader": "^0.7.1",
     "fg-loadcss": "^0.2.4",
     "fg-loadjs": "^0.2.3",
+    "file-loader": "^0.8.5",
     "jsdoc": "^3.4.0",
     "jsdoc-oblivion": "0.0.4",
-    "parallelshell": "^2.0.0",
+    "mustache": "^2.2.1",
+    "node-sass": "^3.7.0",
     "paramalama": "~0.2",
     "postcss-cli": "^2.1.0",
+    "postcss-loader": "^0.9.1",
     "properjs-controller": "~0.2",
     "properjs-debounce": "^0.2.0",
     "properjs-easing": "~0.2",
+    "properjs-hobo": "^0.3.10",
     "properjs-imageloader": ">=0.2.1",
     "properjs-matchelement": "~0.2",
     "properjs-mediabox": "~0.3",
     "properjs-pagecontroller": "~0.3",
     "properjs-resizecontroller": "~0.2",
+    "properjs-scroll2": "~0.2",
     "properjs-scrollcontroller": "~0.2",
+    "properjs-template": "~0.2",
     "properjs-throttle": "^0.3.0",
     "properjs-tween": "~0.2",
-    "webpack": "^1.12.0"
-  },
-  "config": {
-    "scss_file": "./source/sass/screen.scss",
-    "css_file": "./static/css/screen.css",
-    "js_file": "./source/js/app.js",
-    "js_map": "./static/js/app.js.map",
-    "js_map_min": "./static/js/app.min.js.map"
+    "sass-loader": "^3.2.0",
+    "webpack": "^1.13.0"
   },
   "scripts": {
-    "doc:js": "jsdoc source/js/ -r -R README.md -P package.json -t node_modules/jsdoc-oblivion/template -c node_modules/jsdoc-oblivion/template/jsdoc.conf.json -d static/js-docs",
-    "lint:js": "eslint source/js/",
-    "build": "npm run build:js && npm run build:css",
-    "build:js": "npm run lint:js && webpack -d",
-    "build:css": "sass --scss --style compressed $npm_package_config_scss_file:$npm_package_config_css_file",
-    "postbuild:css": "postcss --use autoprefixer --autoprefixer.browsers 'last 2 versions' --output $npm_package_config_css_file $npm_package_config_css_file",
-    "watch": "parallelshell 'npm run watch:js' 'npm run watch:sass'",
-    "watch:js": "chokidar ./source/js/* --initial -d 10 -c 'npm run build:js'",
-    "watch:sass": "chokidar ./source/sass/* --initial -d 10 -c 'npm run build:css'",
-    "start": "npm run watch"
+    "lint": "./node_modules/.bin/eslint ./source/js/",
+    "jsdoc": "jsdoc source/js/ -r -R README.md -P package.json -t node_modules/jsdoc-oblivion/template -c node_modules/jsdoc-oblivion/template/jsdoc.conf.json -d jsdocs",
+    "watch": "./node_modules/.bin/webpack -d --watch --colors",
+    "start": "npm run watch",
+    "postinstall": "cd ./node_modules/properjs-hobo && npm install && npm run build -- 'eq not filter detach append remove'"
   },
-  "repository": {},
-  "bugs": {},
-  "licenses": [],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ProperJS/App.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ProperJS/App/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/ProperJS/App/blob/master/LICENSE"
+    }
+  ],
   "keywords": [],
   "license": "MIT",
-  "contributors": [],
+  "contributors": [
+    {
+      "name": "Brandon Kitajchuk",
+      "email": "kitajchuk@gmail.com",
+      "url": "http://blkpdx.com"
+    }
+  ],
   "readmeFilename": "README.md"
 }
