--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
-    "ejs": "^2.4.1",
     "eslint": "^2.9.0",
     "eslint-loader": "^1.3.0",
     "expose-loader": "^0.7.1",
     "fg-loadcss": "^0.2.4",
     "fg-loadjs": "^0.2.3",
     "file-loader": "^0.8.5",
+    "handlebars": "^4.0.5",
     "jsdoc": "^3.4.0",
     "jsdoc-oblivion": "0.0.4",
-    "mustache": "^2.2.1",
     "node-sass": "^3.7.0",
     "paramalama": "~0.2",
     "postcss-cli": "^2.1.0",
@@ -34,10 +33,10 @@
     "properjs-resizecontroller": "~0.2",
     "properjs-scroll2": "~0.2",
     "properjs-scrollcontroller": "~0.2",
-    "properjs-template": "~0.2",
     "properjs-throttle": "^0.3.0",
     "properjs-tween": "~0.2",
     "sass-loader": "^3.2.0",
+    "vue": "^1.0.24",
     "webpack": "^1.13.0"
   },
   "scripts": {
@@ -45,7 +44,9 @@
     "jsdoc": "jsdoc source/js/ -r -R README.md -P package.json -t node_modules/jsdoc-oblivion/template -c node_modules/jsdoc-oblivion/template/jsdoc.conf.json -d jsdocs",
     "watch": "./node_modules/.bin/webpack -d --watch --colors",
     "start": "npm run watch",
-    "postinstall": "cd ./node_modules/properjs-hobo && npm install && npm run build -- 'eq not filter detach append remove'"
+    "sync": "./node_modules/.bin/prismic-express sync",
+    "build": "./node_modules/.bin/prismic-express build",
+    "postinstall": "cd ./node_modules/properjs-hobo && npm install && npm run build -- 'is eq not filter detach append remove toggleClass'"
   },
   "repository": {
     "type": "git",
