--- a/.eslintrc
+++ b/.eslintrc
@@ -192,7 +192,7 @@
                 "min": 2,
                 "max": 37,
                 "properties": "never",
-                "exceptions": ["$", "a", "b", "e", "i", "j", "k", "x", "y", "z"]
+                "exceptions": ["$", "a", "b", "d", "e", "i", "j", "k", "x", "y", "z"]
             }
         ],
         //"id-match": [2, "^[a-z]+([A-Z][a-z]+)*$", {"properties": false}],
