--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
+    "body-parser": "^1.15.2",
     "browser-sync": "^2.13.0",
     "browser-sync-webpack-plugin": "^1.0.3",
     "eslint": "^2.9.0",
@@ -42,13 +43,15 @@
     "properjs-tween": "~0.2",
     "sass-loader": "^3.2.0",
     "vue": "^1.0.24",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "websocket": "^1.0.23"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint ./source/js/",
     "jsdoc": "jsdoc source/js/ -r -R README.md -P package.json -t node_modules/jsdoc-oblivion/template -c node_modules/jsdoc-oblivion/template/jsdoc.conf.json -d jsdocs",
     "watch": "./node_modules/.bin/webpack -d --watch --colors",
     "start": "npm run watch",
+    "node": "set -x NODE_ENV development ; node server/server.js",
     "sync": "./node_modules/.bin/prismic-express sync",
     "build": "./node_modules/.bin/prismic-express build",
     "postbuild": "./bin/deploy-staging",
