--- a/circle.yml
+++ b/circle.yml
@@ -11,10 +11,8 @@ machine:
 
 test:
     override:
-        - node -v
-        - node -e 'console.log( "Node V8 version - " + process.versions.v8 );'
         - mkdir db
-        - npm run lint
+        - webpack -d # lint, babel, sass
         - npm run sync
         - npm run build
 
