reference npm installed webpack for circle build

--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ machine:
 test:
     override:
         - mkdir db
-        - webpack -d # lint, babel, sass
+        - npm run webpack # lint, babel, sass
         - npm run sync
         - npm run build
 
