Working on final hit list

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jsdoc": "jsdoc source/js/ -r -R README.md -P package.json -t node_modules/jsdoc-oblivion/template -c node_modules/jsdoc-oblivion/template/jsdoc.conf.json -d jsdocs",
     "watch": "./node_modules/.bin/webpack -d --watch --colors",
     "start": "npm run watch",
-    "node": "set -x NODE_ENV development ; node server/server.js",
+    "node-fish": "set -x NODE_ENV development ; node server/server.js",
+    "node-bash": "export NODE_ENV=development ; node server/server.js",
     "sync": "./node_modules/.bin/prismic-express sync",
     "build": "./node_modules/.bin/prismic-express build",
     "webpack": "./node_modules/.bin/webpack -d --colors",
