--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,8 @@ machine:
     America/Los_Angeles
 
 dependencies:
-  cache_directories:
-    - "node_modules"
+  # cache_directories:
+    # - "node_modules"
   override:
     - npm install
     - npm rebuild node-sass
