--- a/circle.yml
+++ b/circle.yml
@@ -1,21 +1,22 @@
 general:
-  branches:
-    only:
-      - master
+    branches:
+        only:
+            - dev
+            - master
 
 machine:
-  node:
-    version: 6.1.0
-  timezone:
-    America/Los_Angeles
+    node:
+        version: 6.1.0
+    timezone:
+        America/Los_Angeles
 
 dependencies:
-  cache_directories:
-    - "node_modules"
-  override:
-    - npm install
-    - npm update prismic-express
-    - npm rebuild node-sass
+    cache_directories:
+        - "node_modules"
+    override:
+        - npm install
+        - npm update prismic-express
+        - npm rebuild node-sass
 
 test:
     override:
@@ -25,7 +26,11 @@ test:
         - npm run build
 
 deployment:
-  production:
-    branch: master
-    commands:
-        - make -f Circlefile deploy_all
+    staging:
+        branch: dev
+        commands:
+            - make -f Circlefile deploy_staging
+    production:
+        branch: master
+        commands:
+            - make -f Circlefile deploy_production
